--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "main": "src/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon src/index.js"
+    "dev": "nodemon src/index.js",
+    "start": "node src/index.js"
   },
   "keywords": [],
   "author": "",
@@ -15,6 +16,8 @@
     "@grammyjs/menu": "^1.2.1",
     "@grammyjs/parse-mode": "^1.9.0",
     "@grammyjs/ratelimiter": "^1.2.0",
+    "axios": "^1.7.4",
+    "cheerio": "^1.0.0",
     "dotenv": "^16.4.5",
     "grammy": "^1.21.2",
     "mongoose": "^8.2.4"
