--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@grammyjs/parse-mode": "^1.9.0",
     "@grammyjs/ratelimiter": "^1.2.0",
     "axios": "^1.7.4",
+    "chalk": "^5.3.0",
     "cheerio": "^1.0.0",
     "dotenv": "^16.4.5",
     "grammy": "^1.21.2",
