--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "cheerio": "^1.0.0",
     "dotenv": "^16.4.5",
     "grammy": "^1.21.2",
-    "mongoose": "^8.2.4"
+    "mongoose": "^8.2.4",
+    "readline": "^1.3.0",
+    "sqlite3": "^5.1.7"
   },
   "devDependencies": {
     "nodemon": "^3.1.0"
