--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "axios": "^1.7.4",
     "chalk": "^5.3.0",
     "cheerio": "^1.0.0",
+    "child_process": "^1.0.2",
     "dotenv": "^16.4.5",
     "grammy": "^1.21.2",
     "mongoose": "^8.2.4",
