--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@grammyjs/menu": "^1.2.1",
     "@grammyjs/parse-mode": "^1.9.0",
     "@grammyjs/ratelimiter": "^1.2.0",
+    "@grammyjs/storage-file": "^2.4.2",
     "axios": "^1.7.4",
     "chalk": "^5.3.0",
     "cheerio": "^1.0.0",
