--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "grammy": "^1.21.2",
     "mongoose": "^8.2.4",
     "readline": "^1.3.0",
+    "sqlite": "^5.1.1",
     "sqlite3": "^5.1.7"
   },
   "devDependencies": {
